# JobNexus

./: .gitignore  .gitkeep  LICENSE  README.md  pyproject.toml  requirements.txt
BotBackend/: README.md  abcd.json  main.py  mainAgent.py  pyproject.toml  resumeagent.py  reviewerAgent.py  session.json  session.pkl
BotBackend/db/: database.py
BotBackend/scraper/: job_scraper.py  profile_scraper.py  session.json  session.pkl
BotBackend/server/apis/: jobroutes.py  main.py
BotBackend/server/models/: jobdata.py  user.py
BotBackend/state/: contactState.py  resumeState.py  workflow.py
InterviewBackend/: AGENTS.md  README.md  pyproject.toml
InterviewBackend/src/: agent.py
JobNexusAIInterview/AiInterview/: package-lock.json  pnpm-lock.yaml
JobNexusAIInterview/AiInterview/app/: layout.tsx
JobNexusAIInterview/AiInterview/components/app/: session-view.tsx  welcome-view.tsx
JobNexusAIInterview/AiInterview/components/learning/: FlashCard.tsx  LearningPanel.tsx  types.ts
JobNexusAIInterview/AiInterview/styles/: globals.css
app/: README.md  app-config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/app/: layout.tsx  page.tsx
app/app/auth/callback/: route.ts
app/app/auth/signout/: route.ts
app/app/dashboard/: page.tsx
app/app/dashboard/chat/: page.tsx
app/app/dashboard/interviews/: layout.tsx
app/app/dashboard/jobs/: page.tsx
app/app/dashboard/jobs/saved/: page.tsx
app/app/dashboard/profile/: page.tsx
app/app/login/: page.tsx
app/app/signup/: page.tsx
app/auth/callback/: route.ts
app/components/agents-ui/: agent-audio-visualizer-bar.tsx  agent-audio-visualizer-grid.tsx  agent-audio-visualizer-radial.tsx  agent-chat-indicator.tsx  agent-chat-transcript.tsx  agent-control-bar.tsx  agent-disconnect-button.tsx  agent-session-provider.tsx  agent-track-control.tsx  agent-track-toggle.tsx  start-audio-button.tsx
app/components/ai-elements/: conversation.tsx  message.tsx  shimmer.tsx
app/components/app/: app.tsx  chat-transcript.tsx  session-view.tsx  theme-toggle.tsx  tile-layout.tsx  view-controller.tsx  welcome-view.tsx
app/components/dashboard/: CardWithIcon.tsx
app/components/layout/: DashboardHeader.tsx  Sidebar.tsx
app/components/learning/: FlashCard.tsx  LearningPanel.tsx  Quiz.tsx  index.ts  types.ts
app/components/ui/: alert.tsx  button-group.tsx  button.tsx  select.tsx  separator.tsx  sonner.tsx  toggle.tsx  tooltip.tsx
app/hooks/: useAgentErrors.tsx
app/hooks/agents-ui/: use-agent-audio-visualizer-bar.ts  use-agent-audio-visualizer-grid.ts  use-agent-audio-visualizer-radial.ts  use-agent-control-bar.ts
app/lib/: dummyJobs.json  jobsData.ts  utils.ts
app/lib/supabase/: middleware.ts  server.ts
app/public/: index.html
app/styles/: globals.css
backend/: .env.example  abcd.json  linkedin_jobs.json  main.py  mainAgent.py  pyproject.toml  resumeagent.py  reviewerAgent.py  session.json
backend/db/: database.py
backend/scraper/: job_scraper.py  linkedInScraper.py  linkedin_jobs.json  profile_scraper.py  session.json
backend/server/: linkedin_jobs.json  main.py
backend/server/apis/: jobroutes.py  main.py
backend/server/models/: jobdata.py  user.py
backend/state/: contactState.py  resumeState.py  workflow.py
backend/voiceAI/: pyproject.toml
backend/voiceAI/src/: agent.py
scraper/: .env  linkedInScraper.py  scraperLogic.py
