[project]
name = "jobnexus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiohttp-retry==2.9.1",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "cachetools==6.2.4",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "dataclasses-json==0.6.7",
    "deprecation==2.1.0",
    "distro==1.9.0",
    "fastapi>=0.128.0",
    "filetype==1.2.0",
    "frozenlist==1.8.0",
    "fsspec==2026.1.0",
    "google-auth==2.47.0",
    "google-genai==1.60.0",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "hyperframe==6.1.0",
    "idna==3.11",
    "jiter==0.12.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain-classic==1.0.1",
    "langchain-community==0.4.1",
    "langchain-core==1.2.7",
    "langchain-google-genai==4.2.0",
    "langchain-openai==1.1.7",
    "langchain-pinecone==0.2.13",
    "langchain-text-splitters==1.1.0",
    "langgraph==1.0.7",
    "langgraph-checkpoint==4.0.0",
    "langgraph-prebuilt==1.0.7",
    "langgraph-sdk==0.3.3",
    "langsmith==0.6.4",
    "linkedin-scraper==3.1.0",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "markdownify==0.13.1",
    "marshmallow==3.26.2",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "numpy==2.4.1",
    "openai==2.15.0",
    "orjson==3.11.5",
    "ormsgpack==1.12.2",
    "packaging==24.2",
    "pandas==2.3.3",
    "pdfminer-six==20251230",
    "pdfplumber==0.11.9",
    "pillow==12.1.0",
    "pinecone==7.3.0",
    "pinecone-plugin-assistant==1.8.0",
    "pinecone-plugin-interface==0.0.7",
    "playwright==1.57.0",
    "postgrest==2.27.2",
    "propcache==0.4.1",
    "pyasn1==0.6.2",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pyee==13.0.0",
    "pygments==2.19.2",
    "pyiceberg==0.10.0",
    "pyjwt==2.10.1",
    "pyparsing==3.3.2",
    "pypdf==6.6.0",
    "pypdfium2==5.3.0",
    "pyroaring==1.0.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "realtime==2.27.2",
    "regex==2024.11.6",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "rsa==4.9.1",
    "simsimd==6.5.12",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8.3",
    "sqlalchemy==2.0.46",
    "storage3==2.27.2",
    "strenum==0.4.15",
    "strictyaml==1.7.3",
    "supabase==2.27.2",
    "supabase-auth==2.27.2",
    "supabase-functions==2.27.2",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "tls-client==1.0.1",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "uuid-utils==0.14.0",
    "uvicorn>=0.40.0",
    "websockets==15.0.1",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zstandard==0.25.0",
]
